fixed the ordedr status visiblility and did some centering for it

--- a/src/Orders.css
+++ b/src/Orders.css
@@ -14,3 +14,16 @@
   border-radius: 40px;
   font-family: 'Poppins';
 }
+
+.order-header {
+  display: flex;
+  align-items: center;     
+  gap: 1rem;
+}
+
+
+.badge {
+  background: #0d6efd;
+  color: white;
+  position: static;
+}
